--- a/src/pages/Auth/Login/Login.css
+++ b/src/pages/Auth/Login/Login.css
@@ -81,6 +81,14 @@ button:hover {
     background-color: #9ca3af;
 }
 
+.err{
+position: absolute;
+color: red;
+bottom: 5px;
+right:10px;
+font-size: larger;
+}
+
 @media only screen and (max-width: 600px) {
    .headline{
     width: 65%;
